Using z-index to fix layered divs on mobile

--- a/source/assets/stylesheets/app.css.scss
+++ b/source/assets/stylesheets/app.css.scss
@@ -71,6 +71,7 @@ body {
   border: 1px solid white;
   box-shadow: 0 3px 15px rgba(255, 255, 255, 0.2);
   color: white;
+  z-index: 1;
   h1 {
     font-size: 60px;
     margin-top: 70px;
